trying to fix zoom problem on mobile

--- a/src/components/PageContainerNoScroll/PageContainerNoScroll.styles.css
+++ b/src/components/PageContainerNoScroll/PageContainerNoScroll.styles.css
@@ -1,5 +1,4 @@
 .page-container-noscroll {
-  width: 100vw;
   background-color: var(--color-background);
 }
 
